--- a/HomeApps/HomeApps.csproj
+++ b/HomeApps/HomeApps.csproj
@@ -215,7 +215,6 @@
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
     <Content Include="Unity.Mvc4.README.txt" />
-    <Content Include="Views\Stores\Index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Views\Actions\Edit.cshtml" />
     <Content Include="Views\WeightTrackers\Create.cshtml" />
@@ -233,9 +232,29 @@
     <Content Include="Views\CameraModels\GetGenderTypes.cshtml" />
     <Content Include="Views\CameraModels\GetWebSites.cshtml" />
     <Content Include="Views\CameraModels\CreateWebSite.cshtml" />
-    <Content Include="Views\Shared\_GroceryLayout.cshtml" />
     <Content Include="Views\CameraModels\CreateModelNotes.cshtml" />
     <Content Include="Views\CameraModels\GetModelNotes.cshtml" />
+    <Content Include="Views\GroceriesStores\Create.cshtml" />
+    <Content Include="Views\GroceriesStores\Delete.cshtml" />
+    <Content Include="Views\GroceriesStores\Details.cshtml" />
+    <Content Include="Views\GroceriesStores\Edit.cshtml" />
+    <Content Include="Views\GroceriesStores\Index.cshtml" />
+    <Content Include="Views\Shared\_GrocerieLayouts.cshtml" />
+    <Content Include="Views\GroceriesItemLists\Create.cshtml" />
+    <Content Include="Views\GroceriesItemLists\Delete.cshtml" />
+    <Content Include="Views\GroceriesItemLists\Details.cshtml" />
+    <Content Include="Views\GroceriesItemLists\Edit.cshtml" />
+    <Content Include="Views\GroceriesItemLists\Index.cshtml" />
+    <Content Include="Views\SizeTypes\Create.cshtml" />
+    <Content Include="Views\SizeTypes\Delete.cshtml" />
+    <Content Include="Views\SizeTypes\Details.cshtml" />
+    <Content Include="Views\SizeTypes\Edit.cshtml" />
+    <Content Include="Views\SizeTypes\Index.cshtml" />
+    <Content Include="Views\GroceriesItems\Create.cshtml" />
+    <Content Include="Views\GroceriesItems\Delete.cshtml" />
+    <Content Include="Views\GroceriesItems\Details.cshtml" />
+    <Content Include="Views\GroceriesItems\Edit.cshtml" />
+    <Content Include="Views\GroceriesItems\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -259,6 +278,37 @@
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\CameraModelsController.cs" />
+    <Compile Include="Controllers\GroceriesItemListsController.cs" />
+    <Compile Include="Controllers\GroceriesItemsController.cs" />
+    <Compile Include="Controllers\GroceriesStoresController.cs" />
+    <Compile Include="Controllers\SizeTypesController.cs" />
+    <Compile Include="CreateModifyLog.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventAction.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Gender.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GenderType.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Item.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ItemList.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Logging.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Mile.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelWebsite.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\EventCreateModel.cs" />
     <Compile Include="Model\MilesAddModel.cs" />
     <Compile Include="Model\MilesViewModel.cs" />
@@ -272,18 +322,6 @@
     <Compile Include="Controllers\TheEventsController.cs" />
     <Compile Include="Controllers\UsersPeoplesController.cs" />
     <Compile Include="Controllers\WeightTrackersController.cs" />
-    <Compile Include="CreateModifyLog.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EventAction.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Gender.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
-    <Compile Include="GenderType.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -305,20 +343,14 @@
     <Compile Include="Infrastructure\Access.cs" />
     <Compile Include="Infrastructure\Helper.cs" />
     <Compile Include="Infrastructure\Logging.cs" />
-    <Compile Include="Logging.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Mile.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModelWebsite.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
     <Compile Include="Model\TheEventAction.cs" />
     <Compile Include="Model\TheEventDetails.cs" />
     <Compile Include="Model\TheEventCreate.cs" />
     <Compile Include="Model\WeightTrackerViewModel.cs" />
     <Compile Include="MyExceptionHandler.cs" />
+    <Compile Include="Price.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
@@ -326,7 +358,13 @@
     <Compile Include="Schema.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
+    <Compile Include="SizeType.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
     <Compile Include="Station.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Store.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
     <Compile Include="TheEvent.cs">
@@ -416,11 +454,6 @@
     <Content Include="Views\TheEvents\Index.cshtml" />
     <Content Include="Views\Shared\_MateLayout.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
-    <Content Include="Views\Stores\Create.cshtml" />
-    <Content Include="Views\Stores\Delete.cshtml" />
-    <Content Include="Views\Stores\Details.cshtml" />
-    <Content Include="Views\Stores\Edit.cshtml" />
-    <Content Include="Views\Stores\Index-WS.cshtml" />
     <Content Include="Views\Shared\_CameraModels.cshtml" />
   </ItemGroup>
   <ItemGroup>
